tests/health/gold/sdk/tests__lsp__field_storing_completion_test.toit.gold
tests/lsp/field_storing_completion_test.toit:60:5: error: Field-storing parameter not allowed in static functions
foo .field_storing:
    ^~~~~~~~~~~~~~
tests/lsp/field_storing_completion_test.toit:41:23: error: Field-storing parameter not allowed in static functions
  constructor.factory .field_B1:
                      ^~~~~~~~~
tests/lsp/field_storing_completion_test.toit:55:14: error: Field-storing parameter not allowed in static functions
  static foo .field_B1:
             ^~~~~~~~~
<sdk>/core/numbers.toit:593:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:597:12: warning: Deprecated 'int.parse'
    return parse data from to --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:606:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=on_error
           ^~~~~
<sdk>/core/string.toit:327:14: warning: Deprecated 'int.parse'
        : int.parse format start (pos - 1) --radix=10 --on_error=: throw it
             ^
